# sentinella

./: .gitignore  .sentinella.yaml  .sentinella.yaml.example  Cargo.toml  DELIVERY_REPORT.md  KNOWLEDGE_BASE_ARCHITECTURE.md  OPTIMIZATION_PLAN.md  README.md
.github/workflows/: ci.yml
docs/: S12-data-isolation-audit-plan.md
rules/builtin/: actix.yaml  axum.yaml  chi.yaml  django.yaml  echo.yaml  express.yaml  fastapi.yaml  flask.yaml  gin.yaml  laravel.yaml  nestjs.yaml  rails.yaml  spring-boot.yaml
src/: calibration.rs  calibration_transfer.rs  correlation.rs  evidence.rs  lib.rs  main.rs  memory.rs  pack_manager.rs  pattern_miner.rs  rule_lifecycle.rs  state.rs  suppress.rs
src/config/: architecture.rs  loader.rs  mod.rs  schema.rs
src/dispatchers/: github.rs  mod.rs  notion.rs  stdout.rs
src/indexer/: mod.rs  store.rs  types.rs
src/reporters/: gap.rs  matrix.rs  mod.rs  task_decomposer.rs
src/rule_pack/: detect.rs  engine.rs  loader.rs  mod.rs  schema.rs  validator.rs
src/scanners/: api_contract_drift.rs  append_only_lifecycle.rs  audit_log_completeness.rs  cross_db_integrity.rs  cross_layer_tracer.rs  cross_service_duplication.rs  data_isolation.rs  deploy_readiness.rs  destructive_endpoint_safety.rs  doc_fact_drift.rs  env_config_drift.rs  event_schema_drift.rs  flow_analyzer.rs  insecure_token_storage.rs  integration_test_cov.rs  missing_uniqueness.rs  mod.rs  otp_replay_protection.rs  permission_boundary.rs  plan_drift.rs  types.rs  (+14 more)
templates/: Makefile.sentinella  backend_only.yaml  fullstack.yaml  monorepo.yaml
tests/: integration_tests.rs
(+46 files in other folders)
